--- a/app/src/main/res/drawable/gradient_3.xml
+++ b/app/src/main/res/drawable/gradient_3.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="135"
-        android:endColor="#5869ae"
+        android:endColor="#82b8ce"
         android:startColor="#f8cdda" />
 </shape>
