--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Titlu reteta"
-            android:textSize="15sp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <EditText
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Categorie"
-            android:textSize="15sp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
 
@@ -53,27 +53,30 @@
            >
 
             <RadioButton
+                android:id="@+id/desertradio"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="16dp"
+                android:onClick="onRadioButtonClicked"
                 android:text="Desert"
-                android:textSize="15sp"
+                android:textSize="20sp"
 
                 />
 
             <RadioButton
+                android:id="@+id/felprincipalradio"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="16dp"
+                android:onClick="onRadioButtonClicked"
                 android:text="Fel principal"
-                android:textSize="15sp"/>
+                android:textSize="20sp"/>
 
             <RadioButton
+                android:id="@+id/superadio"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="32dp"
+                android:onClick="onRadioButtonClicked"
                 android:text="Supe"
-                android:textSize="15sp"/>
+                android:textSize="20sp"/>
         </RadioGroup>
     </LinearLayout>
 
@@ -82,22 +85,16 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:padding="8dp">
+     >
 
-        <TextView
-            android:id="@+id/text_view_evaluare"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Evaluare"
-            android:textStyle="bold" />
-
-        <SeekBar
-            android:id="@+id/seek_bar"
+        <EditText
+            android:id="@+id/textfeed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:max="100"
-            android:progress="10" />
+          android:hint="Evaluare"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
 
     </LinearLayout>
 
@@ -111,8 +108,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nota"
+
             android:textStyle="bold"
-            android:textSize="15sp"/>
+            android:textSize="20sp"/>
 
         <RatingBar
             android:id="@+id/rating_bar"
@@ -139,12 +137,13 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="Galerie foto"
-                android:textSize="15sp"/>
+                android:textSize="20sp"/>
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="SELECT"
+                android:background="@color/light_yellow"
                 android:onClick="btnStartCamera"/>
 
         </LinearLayout>
@@ -160,10 +159,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Fa o fotografie" />
+                android:text="Fa o fotografie"
+                android:textSize="20sp"
+                />
 
             <Button
                 android:onClick="btnOpenGalery"
+                android:background="@color/light_yellow"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="SELECT" />
@@ -179,7 +181,8 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="btnSave"
+            android:onClick="insertfeed"
+            android:background="@color/light_yellow"
             android:text="Salveaza" />
     </LinearLayout>
 
