--- a/app/src/main/res/layout/activity_get.xml
+++ b/app/src/main/res/layout/activity_get.xml
@@ -4,47 +4,112 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_yellow"
     android:padding="10dp"
     tools:context=".GetActivity">
+
 <LinearLayout
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="wrap_content">
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="12dp"
-        android:text="Desert"
-       />
 
-    <Button
-        android:id="@+id/button3"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Categorie"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/space_16"
+            android:orientation="horizontal"
+            >
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Desert"
+                android:id="@+id/desertradio"
+                android:onClick="onRadioButtonClicked"
+                android:textSize="17sp"
+                />
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/felprincipalradio"
+
+                android:text="Fel principal"
+                android:onClick="onRadioButtonClicked"
+                android:textSize="17sp"/>
+
+            <RadioButton
+                android:id="@+id/superadio"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:onClick="onRadioButtonClicked"
+                android:text="Supe"
+                android:textSize="17sp" />
+
+        </RadioGroup>
+
+    </LinearLayout>
+
+
+    <EditText
+        android:id="@+id/et_ing1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="44dp"
+        android:layout_marginTop="@dimen/space_32"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:text="fel principal"
-       />
+        android:hint="Ingredient 1"
+        />
 
-    <Button
-        android:id="@+id/button4"
+    <EditText
+        android:id="@+id/et_ing2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:text="Supe"
-      />
+        android:hint="Ingredient 2"
+        />
+
+    <CheckBox android:id="@+id/checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_16"
+        android:layout_marginLeft="@dimen/space_32"
+        android:textSize="17sp"
+        android:text="confirma ingredientele introduse"
+        android:onClick="onCheckboxClicked"/>
 
     <Button
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:text="Get JSON"
+        android:text="Salveaza optiunile alese"
+        android:layout_marginTop="@dimen/space_32"
+        android:layout_gravity="center_horizontal"
+        android:onClick="salveaza"
+        android:id="@+id/bsalveaza"
+        />
+
+
+    <Button
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:text="Genereaza retetele"
+        android:layout_marginTop="@dimen/space_32"
         android:layout_gravity="center_horizontal"
         android:onClick="getJSON"
         android:id="@+id/b1"
@@ -53,7 +118,7 @@
     <Button
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:text="Parse JSON"
+        android:text="Aranjeaza retetele"
         android:layout_gravity="center_horizontal"
         android:onClick="parseJSON"
         android:id="@+id/b2"
@@ -64,7 +129,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="JSON Appear here"
+        android:text=" "
         android:textAppearance="?android:textAppearanceLarge"
         android:gravity="center"
         android:layout_marginTop="20dp"
@@ -73,4 +138,5 @@
         />
 
 </LinearLayout>
+
 </ScrollView>
