--- a/app/src/main/res/layout/activity_meniu.xml
+++ b/app/src/main/res/layout/activity_meniu.xml
@@ -18,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@color/light_yellow"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_meniu"
         app:menu="@menu/activity_meniu_drawer" />
