--- a/app/src/main/res/menu/activity_meniu_drawer.xml
+++ b/app/src/main/res/menu/activity_meniu_drawer.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="navigation_view">
+    tools:showIn="navigation_view"
+    >
 
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="single"
+        >
         <item
             android:id="@+id/profil"
            android:icon="@drawable/ic_person_black_24dp"
-            android:title="Profil" />
+            android:title="Profilul utilizatorului"
+
+           />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
