--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#ecc08d</color>
+    <color name="colorPrimaryDark">#FD987A</color>
     <color name="colorAccent">#FF4081</color>
     <color name="purple">#9c27b0</color>
     <color name="orange">#FD987A</color>
@@ -13,4 +13,6 @@
     <color name="yellow_green">#C3FF6B</color>
     <color name="neon_green">#47FF14</color>
     <color name="red">#FF0000</color>
+    <color name="black">#080808</color>
+    <color name="white"></color>
 </resources>
