--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -25,7 +25,7 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/idcategorie"
+            android:id="@+id/idtitlu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/ic_chevron_right_black_24dp"
@@ -184,6 +184,13 @@
             android:onClick="insertfeed"
             android:background="@color/light_yellow"
             android:text="Salveaza" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="getfeed"
+            android:background="@color/light_yellow"
+            android:text="Arata feed" />
     </LinearLayout>
 
 </LinearLayout>
