--- a/app/src/main/res/layout/activity_get.xml
+++ b/app/src/main/res/layout/activity_get.xml
@@ -94,31 +94,25 @@
         android:text="confirma ingredientele introduse"
         android:onClick="onCheckboxClicked"/>
 
-    <Button
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:text="Salveaza optiunile alese"
-        android:layout_marginTop="@dimen/space_32"
-        android:layout_gravity="center_horizontal"
-        android:onClick="salveaza"
-        android:id="@+id/bsalveaza"
-        />
 
 
     <Button
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:text="Genereaza retetele"
+        android:text="Genereaza retete"
+        android:background="@color/colorPrimary"
         android:layout_marginTop="@dimen/space_32"
         android:layout_gravity="center_horizontal"
         android:onClick="getJSON"
         android:id="@+id/b1"
         />
 
+
     <Button
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="Aranjeaza retetele"
+        android:background="@color/colorPrimary"
         android:layout_gravity="center_horizontal"
         android:onClick="parseJSON"
         android:id="@+id/b2"
