--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -4,7 +4,7 @@
 
     
     <TextView
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/tx_numereteta"
         android:layout_alignParentLeft="true"
@@ -13,37 +13,6 @@
         android:textAppearance="?android:textAppearanceLarge"
 
         />
-    <TextView
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
-        android:id="@+id/tx_nr"
-        android:layout_toRightOf="@+id/tx_numereteta"
-        android:text="Ioana"
-        android:gravity="center"
-        android:textAppearance="?android:textAppearanceLarge"
 
-        />
-
-    <TextView
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
-        android:id="@+id/tx_elemente"
-        android:layout_toRightOf="@+id/tx_nr"
-        android:text="Ioana"
-        android:gravity="center"
-        android:textAppearance="?android:textAppearanceLarge"
-
-        />
-    <TextView
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
-        android:id="@+id/tx_instructiuni"
-        android:layout_toRightOf="@+id/tx_elemente"
-        android:text="Ioana"
-        android:gravity="center"
-        android:textAppearance="?android:textAppearanceLarge"
-
-        />
-    
     
 </RelativeLayout>
