--- a/app/src/main/res/layout/activity_feedback_details.xml
+++ b/app/src/main/res/layout/activity_feedback_details.xml
@@ -5,13 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_yellow"
-    tools:context=".RetetaDetailsActivity">
-
+    tools:context=".FeedbackDetails">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
+        android:id="@+id/tvf"
         android:textStyle="italic"
-        android:textAppearance="@color/blue"
-        android:id="@+id/tv"/>
+        />
+
 </ScrollView>
