--- a/app/src/main/res/layout/activity_get.xml
+++ b/app/src/main/res/layout/activity_get.xml
@@ -99,7 +99,7 @@
     <Button
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:text="Genereaza retete"
+        android:text="1. Obtine lista retete"
         android:background="@color/colorPrimary"
         android:layout_marginTop="@dimen/space_32"
         android:layout_gravity="center_horizontal"
@@ -111,7 +111,7 @@
     <Button
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:text="Aranjeaza retetele"
+        android:text="2. Afiseaza lista retete"
         android:background="@color/colorPrimary"
         android:layout_gravity="center_horizontal"
         android:onClick="parseJSON"
