--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="neon_green">#47FF14</color>
     <color name="red">#FF0000</color>
     <color name="black">#080808</color>
+    <color name="blue">#060946</color>
 </resources>
